Features that don't work in Java 9